# diva

./: LICENSE  changelog.txt  readme.md  setup.cfg
src/diva/: __main__.py
