[metadata]
name = diva
version = 0.1.0
author = Sophie Kirschner
author_email = sophiek@pineapplemachine.com
description = D Language Interface for Versioned Applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pineapplemachine/diva
project_urls =
    Bug Tracker = https://github.com/pineapplemachine/diva/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    diva = diva.__main__:__main__
